--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "FoodFinder",
-  "displayName": "FoodFinder"
+  "name": "FoodFinderRestaurantOrdering",
+  "displayName": "FoodFinderRestaurantOrdering"
 }
